2011-03-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/templates/files/main.vala:
   Add file template for Vala (patch by Mark Trompell, thanks).


2011-03-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/filetypes.c:
   Support copying filetype definition file group keys from a system
   keyfile with e.g. [styling=C].
   Add function utils_make_filename() for building filenames easily.
 * THANKS, plugins/classbuilder.c:
   Improve Class Builder plugin dialog UI using a table (patch by
   Matthew Brush, thanks).
 * plugins/classbuilder.c:
   Fix GLib warning when creating classes and no documents are open
   (patch by Matthew Brush, thanks).
 * plugins/classbuilder.c:
   Undo patch change to cc_option_label_new() to append a ':' colon to
   label text because this unnecessarily causes string translations to
   be updated.
 * src/interface.c, geany.glade:
   Fix wrong label capitalization for Toolbar Preferences dialog tab
   and 2 other labels.
 * data/filetypes.Scala.conf, data/filetype_extensions.conf:
   Add Scala custom filetype, based on file by werg (thanks).
   (This uses the newly added [styling=C] syntax).
 * src/filetypes.c:
   Make special case for filetypes.matlab instead of truncating all
   filetype config filenames at slash.
 * src/filetypes.c:
   Fix generating tag files and --ft-names option by ensuring GTK is
   initialized before calling ui_get_mime_icon().


2011-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS, src/about.c:
   Adding Wei-Lun Chao as current maintainer for traditional Chinese
   translation.


2011-03-15  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/templates.c, src/templates.h:
   Use the same indentation for all templates (part of FR#3193527; from
   a patch by Matthew Brush, thanks).
 * src/plugins.c:
   Always keep the list of loaded plugin sorted by name.


2011-03-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
